--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,3 +1,82 @@
 <header>
-    
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+
+        <!-- Логотип -->
+        <a class="navbar-brand" href="{% url 'feed' %}">
+            <i class="bi bi-journal-text"></i> MyBlog
+        </a>
+
+        <!-- Кнопка для мобільних -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#mainNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="mainNavbar">
+
+            <!-- Ліва частина -->
+            <ul class="navbar-nav me-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'feed' %}">
+                        <i class="bi bi-house"></i> Стрічка
+                    </a>
+                </li>
+
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_post' %}">
+                        <i class="bi bi-plus-circle"></i> Новий пост
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'notifications' %}">
+                        <i class="bi bi-bell"></i> Сповіщення
+                        {% if unread_notifications > 0 %}
+                            <span class="badge bg-danger">
+                                {{ unread_notifications }}
+                            </span>
+                        {% endif %}
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+
+            <!-- Права частина -->
+            <ul class="navbar-nav ms-auto align-items-center">
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="navbar-text me-2">
+                            <i class="bi bi-person-circle"></i> {{ user.username }}
+                        </span>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">
+                            <i class="bi bi-box-arrow-right"></i> Вийти
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">
+                            <i class="bi bi-box-arrow-in-right"></i> Увійти
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">
+                            <i class="bi bi-person-plus"></i> Реєстрація
+                        </a>
+                    </li>
+                {% endif %}
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
 </header>
