--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <title>Редагувати профіль</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 
 <h1>Редагування профілю</h1>
 
@@ -29,5 +25,5 @@
 <br>
 <a href="{% url 'profile' %}">Назад до профілю</a>
 
-</body>
-</html>
+
+{% endblock %}
